# Streamlit_Feeling_NLP

./: Dockerfile  README.md  app.py  main.py  model_nlp.pkl  pyproject.toml  requirements.txt  test.ipynb  train.py  vectorizer_nlp.pkl
