[project]
name = "nlp-projet"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "kagglehub (>=0.3.11,<0.4.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "transformers (>=4.50.2,<5.0.0)",
    "numpy (==2.1.0)",
    "tensorflow (==2.19.0)",
    "tf-keras (==2.19.0)",
    "torch (>=2.6.0,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "nlp_projet", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
